# Anomaly-Detection

./: .gitignore  AnomalyDetector.h  CLI.cpp  CLI.h  CMakeLists.txt  HybridAnomalyDetector.cpp  HybridAnomalyDetector.h  MainTrain.cpp  README.md  Server.cpp  Server.h  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  anomaly_detection_util.cpp  anomaly_detection_util.h  commands.h  minCircle.cpp  minCircle.h  timeseries.cpp  timeseries.h
cppFiles/: anomaly_detection_util.cpp
temp/: CLI.cpp  CLI.h  HybridAnomalyDetector.h  Server.cpp  Server.h  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  anomaly_detection_util.cpp  anomaly_detection_util.h  commands.h  minCircle.cpp  timeseries.cpp  timeseries.h
